2.ordersystem/k8s/depl_svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordersystem-deployment
  namespace: purewa
spec: 
  replicas: 1
  # 아래의 label은 replicaset이 관리해야할 pod를 결정하는데 사용.
  selector: 
    matchLabels:
      app: my-ordersystem
  template: 
    metadata:
      labels:
        app: my-ordersystem
    spec:
      containers:
      - name: my-ordersystem
        image: 346903264902.dkr.ecr.ap-northeast-2.amazonaws.com/purewa/ordersystem:latest
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            # healthcheck 경로
            path: /health
            port: 8080
          # 컨테이너 시작 후 지연
          initialDelaySeconds: 10
          # 확인 반복 주기
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: purewa
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: my-ordersystem
